--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,12 +15,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/typography": "^0.5.10",
+    "bcryptjs": "^2.4.3",
     "bullmq": "^4.15.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "ioredis": "^5.3.2",
+    "jose": "^5.1.3",
     "lucide-react": "^0.292.0",
     "next": "^14.0.0",
+    "next-auth": "^4.24.5",
     "openai": "^4.20.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
@@ -35,6 +38,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/ioredis": "^5.0.0",
     "@types/node": "^20.8.0",
     "@types/pg": "^8.10.7",
